# can-i-upgrade

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: main.yaml  release.yaml
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: check_upgrade.rs  mod.rs
src/node/: mod.rs  models.rs
src/npm/: mod.rs  models.rs
