[package]
name = "can-i-upgrade"
version = "0.4.53"
edition = "2021"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
globset = "0.4.17"
indicatif = "0.18.0"
miette = { version = "7.6.0", features = ["fancy"] }
node-semver = "2.2.0"
prettytable = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
which = "8.0.0"
