[package]
name = "can-i-upgrade"
version = "0.4.60"
edition = "2021"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
console = "0.16.2"
globset = "0.4.18"
indicatif = "0.18.3"
miette = { version = "7.6.0", features = ["fancy"] }
node-semver = "2.2.0"
prettytable = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
which = "8.0.0"
